crates/wn-cli/tests/snapshots/stats__share_svg.snap
---
source: crates/wn-cli/tests/stats.rs
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" width="640" height="358" viewBox="0 0 640 358" role="img" aria-label="where-next stats: a ~300-file Python repo">
<rect x="0.5" y="0.5" width="639" height="357" rx="14" fill="#0e1116" stroke="#262c36"/>
<text x="32" y="44" font-family="ui-sans-serif, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif" font-size="13" font-weight="600" fill="#8a94a3" text-anchor="start">WHERE-NEXT</text>
<text x="608" y="44" font-family="ui-sans-serif, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif" font-size="13" font-weight="400" fill="#8a94a3" text-anchor="end">last 30 days</text>
<text x="32" y="70" font-family="ui-sans-serif, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif" font-size="16" font-weight="500" fill="#e8ecf1" text-anchor="start">a ~300-file Python repo</text>
<text x="32" y="140" font-family="ui-sans-serif, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif" font-size="56" font-weight="700" fill="#4fd1b5" text-anchor="start">60%</text>
<text x="171" y="118" font-family="ui-sans-serif, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif" font-size="15" font-weight="500" fill="#e8ecf1" text-anchor="start">of answers led the agent to a hinted file</text>
<text x="171" y="140" font-family="ui-sans-serif, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif" font-size="13" font-weight="400" fill="#8a94a3" text-anchor="start">read 3 · ran 1 · edited 2 · #1 first 4 of 6</text>
<clipPath id="wn-split"><rect x="32" y="160" width="576" height="10" rx="5"/></clipPath>
<g clip-path="url(#wn-split)"><rect x="32" y="160" width="576" height="10" fill="#1f252e"/><rect x="32.0" y="160" width="345.6" height="10" fill="#4fd1b5"/><rect x="377.6" y="160" width="115.2" height="10" fill="#2f8f7d"/><rect x="492.8" y="160" width="57.6" height="10" fill="#5b6573"/><rect x="550.4" y="160" width="57.6" height="10" fill="#2a313b"/></g>
<circle cx="36" cy="186" r="4" fill="#4fd1b5"/>
<text x="46" y="190" font-family="ui-sans-serif, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif" font-size="12" font-weight="400" fill="#8a94a3" text-anchor="start">exact 6</text>
<circle cx="112" cy="186" r="4" fill="#2f8f7d"/>
<text x="122" y="190" font-family="ui-sans-serif, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif" font-size="12" font-weight="400" fill="#8a94a3" text-anchor="start">near 2</text>
<circle cx="182" cy="186" r="4" fill="#5b6573"/>
<text x="192" y="190" font-family="ui-sans-serif, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif" font-size="12" font-weight="400" fill="#8a94a3" text-anchor="start">elsewhere 1</text>
<circle cx="287" cy="186" r="4" fill="#2a313b"/>
<text x="297" y="190" font-family="ui-sans-serif, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif" font-size="12" font-weight="400" fill="#8a94a3" text-anchor="start">no files 1</text>
<text x="608" y="190" font-family="ui-sans-serif, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif" font-size="12" font-weight="400" fill="#8a94a3" text-anchor="end">10 answers · 4 sessions</text>
<text x="32" y="228" font-family="ui-sans-serif, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif" font-size="12" font-weight="600" fill="#8a94a3" text-anchor="start">Right file in top 3 · replayed on 300 past commits</text>
<text x="32" y="251" font-family="ui-sans-serif, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif" font-size="13" font-weight="400" fill="#e8ecf1" text-anchor="start">wn + adapter</text>
<rect x="150" y="240" width="360" height="12" rx="6" fill="#1f252e"/><rect x="150" y="240" width="311" height="12" rx="6" fill="#4fd1b5"/>
<text x="526" y="251" font-family="ui-monospace, 'SF Mono', Menlo, Consolas, monospace" font-size="13" font-weight="600" fill="#e8ecf1" text-anchor="start">87%</text>
<text x="32" y="273" font-family="ui-sans-serif, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif" font-size="13" font-weight="400" fill="#e8ecf1" text-anchor="start">wn</text>
<rect x="150" y="262" width="360" height="12" rx="6" fill="#1f252e"/><rect x="150" y="262" width="267" height="12" rx="6" fill="#7aa2c8"/>
<text x="526" y="273" font-family="ui-monospace, 'SF Mono', Menlo, Consolas, monospace" font-size="13" font-weight="600" fill="#e8ecf1" text-anchor="start">74%</text>
<text x="32" y="295" font-family="ui-sans-serif, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif" font-size="13" font-weight="400" fill="#e8ecf1" text-anchor="start">grep-style</text>
<rect x="150" y="284" width="360" height="12" rx="6" fill="#1f252e"/><rect x="150" y="284" width="185" height="12" rx="6" fill="#5b6573"/>
<text x="526" y="295" font-family="ui-monospace, 'SF Mono', Menlo, Consolas, monospace" font-size="13" font-weight="600" fill="#e8ecf1" text-anchor="start">51%</text>
<line x1="32" y1="316" x2="608" y2="316" stroke="#262c36"/>
<text x="32" y="338" font-family="ui-sans-serif, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif" font-size="12" font-weight="400" fill="#8a94a3" text-anchor="start">14 ms median · gemma-xl1 + adapter · you edited 7 of 15 hints</text>
<text x="608" y="338" font-family="ui-sans-serif, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif" font-size="12" font-weight="600" fill="#8a94a3" text-anchor="end">where-next · wn</text>
</svg>
