crates/wn-cli/tests/snapshots/stats__stats_all.snap
---
source: crates/wn-cli/tests/stats.rs
expression: "stats::render(&s, PLAIN)"
---
wn stats · all repositories (2) · last 7 days
hooks: not installed → `wn setup` connects Claude Code, Codex and Cursor so hints arrive automatically

Agents used the hint  ████████████░░░░░░░░  60% exact · 20% near  (10 answers)
                      on the hinted file: read 3 · ran 1 · edited 2 · took #1 first 4 of 6
                      elsewhere 1 · no files 1 · from 3 Claude Code / 1 Codex sessions
You edited a hint     7 of 15 answers within 24 h (git)
Speed                 p50 14 ms · p95 41 ms · 294 files
Queries               17  ····················▂····▅·▁·█  request 12 · error 5 · abstained 2
Model                 gemma-xl1 + adapter

repo          queries   agent exact   you edited   replay@3     p50
harbor-demo        17      6/10 60%     7/15 47%        87%   14 ms
tiny-cli            3             –     7/15 47%          –    9 ms
