crates/wn-cli/tests/snapshots/stats__stats_few.snap
---
source: crates/wn-cli/tests/stats.rs
expression: few
---
wn stats · harbor-demo · last 30 days
hooks: not installed → `wn setup` connects Claude Code, Codex and Cursor so hints arrive automatically

Agents used the hint  exact 2 of 3 · near 1
                      on the hinted file: read 2 · ran 0 · edited 0 · took #1 first 1 of 2
                      elsewhere 0 · no files 0 · from 3 Claude Code / 1 Codex sessions
You edited a hint     7 of 15 answers within 24 h (git)
Replay (top 3)        not run yet → `wn bench` (~20 s to a few min for 300 commits)
Speed                 p50 14 ms · p95 41 ms · 294 files
Queries               17  ····················▂····▅·▁·█  request 12 · error 5 · abstained 2
Model                 gemma-xl1 + adapter (200 commits)
