crates/wn-cli/tests/snapshots/stats__stats_repo.snap
---
source: crates/wn-cli/tests/stats.rs
expression: "stats::render(&repo_stats(), PLAIN)"
---
wn stats · harbor-demo · last 30 days

Agents used the hint  ████████████░░░░░░░░  60% exact · 20% near  (10 answers)
                      on the hinted file: read 3 · ran 1 · edited 2 · took #1 first 4 of 6
                      elsewhere 1 · no files 1 · from 3 Claude Code / 1 Codex sessions
You edited a hint     7 of 15 answers within 24 h (git)
Replay (top 3)        wn + adapter 87% · wn 74% · grep-style 51%  (300 commits, 2 days ago)
Speed                 p50 14 ms · p95 41 ms · 294 files
Queries               17  ····················▂····▅·▁·█  request 12 · error 5 · abstained 2
Model                 gemma-xl1 + adapter (200 commits)
